# AutoKey-Rust

./: .gitignore  Cargo.toml  DETECTION_AUDIT.md  GUI_GUIDE.md  QUICKSTART.md  README.md  autokeyrust.txt  build.bat  build.rs  config.example.json  install.ps1  install_and_build.bat  install_and_build.ps1  install_msvc.bat  quick_build.bat  setup.bat
scripts/: packaged-startup-smoke.ps1
src/: autostart.rs  config.rs  engine.rs  gui.rs  hook.rs  hotkey.rs  humanizer.rs  icon.rs  icon_gen.rs  input.rs  logging.rs  main.rs  obfuscate.rs  single_instance.rs  stealth.rs  syscall.rs  taskbar.rs  tray.rs  window.rs
