[package]
name = "AutoKeyRust"
version = "0.2.0"
edition = "2021"
authors = ["System"]

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
fastrand = "2.1"
tray-icon = { version = "0.24.1", default-features = false }
winreg = "0.56"

# GUI框架
eframe = { version = "0.29", default-features = false, features = ["accesskit", "default_fonts", "glow", "wgpu"] }
egui = { version = "0.29", default-features = false }
wgpu = { version = "22.1", default-features = false, features = ["dx12", "wgsl"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"

[profile.release.build-override]
opt-level = 3
